# routes/pay_slip.route.js
@@ -4,7 +4,7 @@ const route = express.Router()
 
 route.get('/getAll', usercontrol.getAll)
 
-route.get('/getByMonth/:', usercontrol.getByMonth)
+route.get('/getByMonth/:paymentDate', usercontrol.getByMonth)
 
 route.post('/create', usercontrol.create)
 
