# swagger-output.json
@@ -180,12 +180,12 @@
         }
       }
     },
-    "/Pay_slip_calculate/getByMonth/{}": {
+    "/Pay_slip_calculate/getByMonth/{paymentDate}": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "",
+            "name": "paymentDate",
             "in": "path",
             "required": true,
             "type": "string"
@@ -194,6 +194,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
